Tp3/y.output
Grammar

    0 $accept: RMvA $end

    1 RMvA: Artistas

    2 Artistas: Artista
    3         | Artistas Artista

    4 Artista: artista '{' Identidade '}'

    5 Identidade: Nome
    6           | Nome Obras
    7           | Nome Obras Eventos
    8           | Nome Obras Eventos Relacoes

    9 Nome: nome '{' Elementos '}'

   10 Obras: obras '{' Elementos '}'

   11 Eventos: eventos '{' Elementos '}'

   12 Relacoes: Ensino
   13         | Colaboracao

   14 Ensino: ensino '{' Elementos '}'

   15 Colaboracao: colaboracao '{' Elementos '}'

   16 Elementos: string ';'
   17          | Elementos string ';'


Terminals, with rules where they appear

$end (0) 0
';' (59) 16 17
'{' (123) 4 9 10 11 14 15
'}' (125) 4 9 10 11 14 15
error (256)
artista (258) 4
nome (259) 9
obras (260) 10
eventos (261) 11
ensino (262) 14
colaboracao (263) 15
string <str> (264) 16 17


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
RMvA (14)
    on left: 1, on right: 0
Artistas <str> (15)
    on left: 2 3, on right: 1 3
Artista <str> (16)
    on left: 4, on right: 2 3
Identidade <str> (17)
    on left: 5 6 7 8, on right: 4
Nome <str> (18)
    on left: 9, on right: 5 6 7 8
Obras <str> (19)
    on left: 10, on right: 6 7 8
Eventos <str> (20)
    on left: 11, on right: 7 8
Relacoes <str> (21)
    on left: 12 13, on right: 8
Ensino <str> (22)
    on left: 14, on right: 12
Colaboracao <str> (23)
    on left: 15, on right: 13
Elementos <str> (24)
    on left: 16 17, on right: 9 10 11 14 15 17


State 0

    0 $accept: . RMvA $end

    artista  shift, and go to state 1

    RMvA      go to state 2
    Artistas  go to state 3
    Artista   go to state 4


State 1

    4 Artista: artista . '{' Identidade '}'

    '{'  shift, and go to state 5


State 2

    0 $accept: RMvA . $end

    $end  shift, and go to state 6


State 3

    1 RMvA: Artistas .
    3 Artistas: Artistas . Artista

    artista  shift, and go to state 1

    $default  reduce using rule 1 (RMvA)

    Artista  go to state 7


State 4

    2 Artistas: Artista .

    $default  reduce using rule 2 (Artistas)


State 5

    4 Artista: artista '{' . Identidade '}'

    nome  shift, and go to state 8

    Identidade  go to state 9
    Nome        go to state 10


State 6

    0 $accept: RMvA $end .

    $default  accept


State 7

    3 Artistas: Artistas Artista .

    $default  reduce using rule 3 (Artistas)


State 8

    9 Nome: nome . '{' Elementos '}'

    '{'  shift, and go to state 11


State 9

    4 Artista: artista '{' Identidade . '}'

    '}'  shift, and go to state 12


State 10

    5 Identidade: Nome .
    6           | Nome . Obras
    7           | Nome . Obras Eventos
    8           | Nome . Obras Eventos Relacoes

    obras  shift, and go to state 13

    $default  reduce using rule 5 (Identidade)

    Obras  go to state 14


State 11

    9 Nome: nome '{' . Elementos '}'

    string  shift, and go to state 15

    Elementos  go to state 16


State 12

    4 Artista: artista '{' Identidade '}' .

    $default  reduce using rule 4 (Artista)


State 13

   10 Obras: obras . '{' Elementos '}'

    '{'  shift, and go to state 17


State 14

    6 Identidade: Nome Obras .
    7           | Nome Obras . Eventos
    8           | Nome Obras . Eventos Relacoes

    eventos  shift, and go to state 18

    $default  reduce using rule 6 (Identidade)

    Eventos  go to state 19


State 15

   16 Elementos: string . ';'

    ';'  shift, and go to state 20


State 16

    9 Nome: nome '{' Elementos . '}'
   17 Elementos: Elementos . string ';'

    string  shift, and go to state 21
    '}'     shift, and go to state 22


State 17

   10 Obras: obras '{' . Elementos '}'

    string  shift, and go to state 15

    Elementos  go to state 23


State 18

   11 Eventos: eventos . '{' Elementos '}'

    '{'  shift, and go to state 24


State 19

    7 Identidade: Nome Obras Eventos .
    8           | Nome Obras Eventos . Relacoes

    ensino       shift, and go to state 25
    colaboracao  shift, and go to state 26

    $default  reduce using rule 7 (Identidade)

    Relacoes     go to state 27
    Ensino       go to state 28
    Colaboracao  go to state 29


State 20

   16 Elementos: string ';' .

    $default  reduce using rule 16 (Elementos)


State 21

   17 Elementos: Elementos string . ';'

    ';'  shift, and go to state 30


State 22

    9 Nome: nome '{' Elementos '}' .

    $default  reduce using rule 9 (Nome)


State 23

   10 Obras: obras '{' Elementos . '}'
   17 Elementos: Elementos . string ';'

    string  shift, and go to state 21
    '}'     shift, and go to state 31


State 24

   11 Eventos: eventos '{' . Elementos '}'

    string  shift, and go to state 15

    Elementos  go to state 32


State 25

   14 Ensino: ensino . '{' Elementos '}'

    '{'  shift, and go to state 33


State 26

   15 Colaboracao: colaboracao . '{' Elementos '}'

    '{'  shift, and go to state 34


State 27

    8 Identidade: Nome Obras Eventos Relacoes .

    $default  reduce using rule 8 (Identidade)


State 28

   12 Relacoes: Ensino .

    $default  reduce using rule 12 (Relacoes)


State 29

   13 Relacoes: Colaboracao .

    $default  reduce using rule 13 (Relacoes)


State 30

   17 Elementos: Elementos string ';' .

    $default  reduce using rule 17 (Elementos)


State 31

   10 Obras: obras '{' Elementos '}' .

    $default  reduce using rule 10 (Obras)


State 32

   11 Eventos: eventos '{' Elementos . '}'
   17 Elementos: Elementos . string ';'

    string  shift, and go to state 21
    '}'     shift, and go to state 35


State 33

   14 Ensino: ensino '{' . Elementos '}'

    string  shift, and go to state 15

    Elementos  go to state 36


State 34

   15 Colaboracao: colaboracao '{' . Elementos '}'

    string  shift, and go to state 15

    Elementos  go to state 37


State 35

   11 Eventos: eventos '{' Elementos '}' .

    $default  reduce using rule 11 (Eventos)


State 36

   14 Ensino: ensino '{' Elementos . '}'
   17 Elementos: Elementos . string ';'

    string  shift, and go to state 21
    '}'     shift, and go to state 38


State 37

   15 Colaboracao: colaboracao '{' Elementos . '}'
   17 Elementos: Elementos . string ';'

    string  shift, and go to state 21
    '}'     shift, and go to state 39


State 38

   14 Ensino: ensino '{' Elementos '}' .

    $default  reduce using rule 14 (Ensino)


State 39

   15 Colaboracao: colaboracao '{' Elementos '}' .

    $default  reduce using rule 15 (Colaboracao)
